# biSere

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
benches/: README.md  serialization_bench.rs  varying_sizes_bench.rs
examples/: driver.rs  usage.rs
src/: error.rs  format.rs  lib.rs  serializer.rs
tests/: integration_test.rs
