[package]
name = "bisere"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
postcard = { version = "1.0", features = ["alloc"] }

[[example]]
name = "usage"
path = "examples/usage.rs"

[[example]]
name = "driver"
path = "examples/driver.rs"

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "varying_sizes_bench"
harness = false

